# yongcat

./: .gitignore  Cargo.toml  LICENSE  QUICKSTART.md  README.md  REVIEW.md  RULES.md  USER_DATA.md  about_data.md  build.rs
data/: example.csv  yong_list.csv
src/: eomi.rs  join.rs  lib.rs  merge.rs  syllable.rs  types.rs  yongeon.rs
src/eomi/: ah_eo.rs  fixed.rs  mod.rs  plain.rs
src/irregular/: bieut.rs  dieut.rs  eu.rs  hieut.rs  mod.rs  reo.rs  reu.rs  rieul.rs  siot.rs  u.rs  yeo.rs
tests/: eomi_ah_eo_test.rs  eomi_find_test.rs  eomi_fixed_test.rs  eomi_plain_test.rs  find_yongeon_test.rs  postfix_test.rs  yongeon_test.rs
